--- a/login-service/pom.xml
+++ b/login-service/pom.xml
@@ -92,6 +92,13 @@
 			<scope>test</scope>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+			<version>2.1.3.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
