--- a/post-service/pom.xml
+++ b/post-service/pom.xml
@@ -105,6 +105,11 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
