--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=user-service
 spring.jpa.show-sql=true
 # default server port
 #server.port=8080
+post-service.ribbon.listOfServers=http://localhost:8080, http://localhost:8081
