Eureka and load balancing with Ribbon

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=user-service
 spring.jpa.show-sql=true
 # default server port
 #server.port=8080
-post-service.ribbon.listOfServers=http://localhost:8080, http://localhost:8081
+#post-service.ribbon.listOfServers=http://localhost:8080, http://localhost:8081
+eureka.client.service-url.default-zone = http://localhost:8761 
